--- a/index.html
+++ b/index.html
@@ -3,44 +3,65 @@
 <body>
   <input type="file" id="fileSelector" />
   <button onclick="convertVideo()">Convert and Download</button>
+  <br/>
+  <progress id="progressBar" value="0" max="100" style="width:300px;"></progress>
+  <br/>
+  <div id="errorMsg" style="color:red;"></div>
+  <button id="clearError" onclick="clearError()" style="display:none;">OK</button>
   <script src="https://ffmpegwasm.github.io/ffmpeg.js/ffmpeg.min.js"></script>
   <script>
+    const clearError = () => {
+      document.getElementById('errorMsg').textContent = '';
+      document.getElementById('clearError').style.display = 'none';
+    }
+
     const convertVideo = async () => {
-      // Get the file from the input field
-      const file = document.querySelector('#fileSelector').files[0];
-      if (!file) {
-        alert('Please select a file');
-        return;
+      try {
+        // Get the file from the input field
+        const file = document.querySelector('#fileSelector').files[0];
+        if (!file) {
+          throw new Error('Please select a file');
+        }
+
+        // Initialize FFmpeg
+        const { createFFmpeg, fetchFile } = FFmpeg;
+        const ffmpeg = createFFmpeg({ 
+          log: true,
+          progress: ({ ratio }) => {
+            document.getElementById('progressBar').value = ratio * 100;
+          },
+        });
+
+        await ffmpeg.load();
+
+        // Convert the File object to a Uint8Array
+        const fileData = new Uint8Array(await file.arrayBuffer());
+
+        // Write the file to FFmpeg's filesystem
+        ffmpeg.FS('writeFile', 'input.webm', fileData);
+
+        // Run the FFmpeg command
+        await ffmpeg.run('-i', 'input.webm', 'output.mp4');
+
+        // Read the result
+        const output = ffmpeg.FS('readFile', 'output.mp4');
+
+        // Create a URL for the converted file
+        const url = URL.createObjectURL(new Blob([output.buffer], { type: 'video/mp4' }));
+
+        // Create a link to download the file
+        const link = document.createElement('a');
+        link.href = url;
+        link.download = 'output.mp4';
+        link.click();
+
+        // Clean up
+        URL.revokeObjectURL(url);
+        document.getElementById('progressBar').value = 0;
+      } catch (error) {
+        document.getElementById('errorMsg').textContent = error;
+        document.getElementById('clearError').style.display = 'inline';
       }
-
-      // Initialize FFmpeg
-      const { createFFmpeg, fetchFile } = FFmpeg;
-      const ffmpeg = createFFmpeg({ log: true });
-      await ffmpeg.load();
-
-      // Convert the File object to a Uint8Array
-      const fileData = new Uint8Array(await file.arrayBuffer());
-
-      // Write the file to FFmpeg's filesystem
-      ffmpeg.FS('writeFile', 'input.webm', fileData);
-
-      // Run the FFmpeg command
-      await ffmpeg.run('-i', 'input.webm', 'output.mp4');
-
-      // Read the result
-      const output = ffmpeg.FS('readFile', 'output.mp4');
-
-      // Create a URL for the converted file
-      const url = URL.createObjectURL(new Blob([output.buffer], { type: 'video/mp4' }));
-
-      // Create a link to download the file
-      const link = document.createElement('a');
-      link.href = url;
-      link.download = 'output.mp4';
-      link.click();
-
-      // Clean up
-      URL.revokeObjectURL(url);
     };
   </script>
 </body>
