third update changed url

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <div id="errorMsg" style="color:red;"></div>
   <button id="clearError" onclick="clearError()" style="display:none;">OK</button>
   <script src="https://ffmpegwasm.github.io/ffmpeg.js/ffmpeg.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ffmpeg-core/0.11.0/ffmpeg-core.min.js"></script>
   <script>
     const clearError = () => {
       document.getElementById('errorMsg').textContent = '';
